# uml-tool

./: .gitignore  .gitmodules  .travis.yml  BuildParameters.cmake  BuildToolset.cmake  CMakeLists.txt  CommonFunctions.cmake  Constants.h  FilesList.cmake  QtHelpers.h  README.md  abstractprojectgenerator.cpp  abstractprojectgenerator.h  association.cpp  association.h  basiccppprojectgenerator.cpp  basiccppprojectgenerator.h  class.cpp  class.h  classmethod.cpp  classmethod.h  code.cpp  code.h  constants.cpp  constants.h  database.cpp  database.h  dependency.cpp  dependency.h  enum.cpp  enum.h  enums.h  extendedtemplatetype.cpp  extendedtemplatetype.h  extendedtype.cpp  extendedtype.h  field.cpp  field.h  generalization.cpp  generalization.h  (+40 more)
Application/: Application.cpp  Application.h  Settings.cpp  Settings.h
Commands/: AddComponentsCommands.cpp  AddComponentsCommands.h  AddRelation.cpp  AddRelation.h  BaseCommand.cpp  BaseCommand.h  CommandFactory.cpp  CommandFactory.hpp  CommandsTypes.h  CreateEntity.cpp  CreateEntity.h  CreateScope.cpp  CreateScope.h  MakeProjectCurrent.cpp  MakeProjectCurrent.h  Memento.cpp  Memento.hpp  MementoCmd.cpp  MementoCmd.hpp  MoveGraphicObject.cpp  MoveGraphicObject.h  MoveTypeToAnotherScope.cpp  MoveTypeToAnotherScope.h  OpenProject.cpp  OpenProject.h  RemoveComponentsCommands.cpp  RemoveComponentsCommands.h  RemoveProject.cpp  RemoveProject.h  RenameEntity.cpp  RenameEntity.h  UpdateEntity.cpp  UpdateEntity.hpp
Common/: BasicElement.cpp  BasicElement.h  CommonTypes.hpp  ElementsFactory.cpp  ElementsFactory.h  ID.cpp  ID.h  IMemento.hpp  IOriginator.cpp  IOriginator.hpp  Memento.cpp  Memento.hpp  MementoJson.cpp  MementoJson.hpp  SharedFromThis.h  meta.h
DB/: DBTypes.hpp  Database.cpp  Database.h  IScopeSearcher.h  ITypeSearcher.h  ProjectDatabase.cpp  ProjectDatabase.h  db_types.hpp
Entity/: Class.cpp  Class.h  ClassMethod.cpp  ClassMethod.h  EntityFactory.cpp  EntityFactory.h  EntityTypes.hpp  Enum.cpp  Enum.h  ExtendedType.cpp  ExtendedType.h  GraphicEntityData.cpp  GraphicEntityData.h  ITextRepresentable.cpp  ITextRepresentable.hpp  ITextable.hpp  Property.cpp  Property.h  Scope.cpp  Scope.h  Template.cpp  Template.h  TemplateClass.cpp  TemplateClass.h  TemplateClassMethod.cpp  TemplateClassMethod.h  Type.cpp  Type.h  Union.cpp  Union.h  entity_types.hpp  field.cpp  field.h  isectional.cpp  isectional.h  itypeuser.h
GUI/: About.cpp  About.h  About.ui  EditEntityDialog.cpp  EditEntityDialog.h  Elements.cpp  Elements.h  EntityProperties.cpp  EntityProperties.h  EntityProperties.ui  EnumPropertiesHandler.cpp  EnumPropertiesHandler.hpp  GuiTypes.hpp  HtmlDelegate.cpp  HtmlDelegate.h  IPropertiesDisplayer.hpp  IPropertiesHandler.hpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewProject.cpp  NewProject.h  NewProject.ui  Preferences.cpp  Preferences.h  Preferences.ui  PropertiesHandlerBase.cpp  PropertiesHandlerBase.hpp  Section.cpp  Section.h  Section.ui  View.cpp  View.h  addscope.cpp  addscope.h  addscope.ui  chooseglobaldatabasedialog.cpp  chooseglobaldatabasedialog.h  chooseglobaldatabasedialog.ui  componentseditdelegate.cpp  (+15 more)
Generator/: abstractprojectgenerator.cpp  abstractprojectgenerator.h  basiccppprojectgenerator.cpp  basiccppprojectgenerator.h  generator_types.hpp  virtualdirectory.cpp  virtualdirectory.h  virtualfile.cpp  virtualfile.h  virtualfilesystemabstractitem.cpp  virtualfilesystemabstractitem.h
Helpers/: GeneratorID.cpp  GeneratorID.h  entityhelpres.cpp  entityhelpres.h
Models/: ApplicationModel.cpp  ApplicationModel.h  BasicTreeItem.cpp  BasicTreeItem.h  ComponentsModel.cpp  ComponentsModel.h  EnumNameModel.cpp  EnumNameModel.hpp  IMessenger.h  ISectionDataModel.hpp  ISectionalDataModel.hpp  MessagesModel.cpp  MessagesModel.h  ModelsTypes.hpp  ProjectTreeModel.cpp  ProjectTreeModel.h  SectionalTextConverter.cpp  SectionalTextConverter.hpp  componentsmodel.cpp  componentsmodel.h
Project/: Project.cpp  Project.h  ProjectDB.cpp  ProjectDB.hpp  ProjectFactory.cpp  ProjectFactory.hpp  ProjectTypes.hpp
Relationship/: Relation.cpp  Relation.h  RelationFactory.cpp  RelationFactory.h  association.cpp  association.h  dependency.cpp  dependency.h  generalization.cpp  generalization.h  multiplyassociation.cpp  multiplyassociation.h  node.cpp  node.h  realization.cpp  realization.h  relationship_types.hpp
Tests/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  TestCommands.h  TestComponentSignatureParser.h  TestComponentsBase.h  TestEntities.h  TestFileMaker.h  TestFiles.cmake  TestIComponents.h  TestProjectBase.h  TestProjectMaker.h  TestRelationMaker.h  TestSectionalTextConverter.hpp  TestSectionalTextConvertion.hpp  helpers.h  main.cpp  test.pro
Tests/cases/: ClassComponentsCases.h  CommandsCases.h  ComponentsMakerCases.h  DepthSearchCases.h  EntitiesCases.h  FileJsonCases.h  FileMakerCases.h  HelpersCases.h  IComponentsCases.h  Memento.h  ProjectCases.h  ProjectDB.h  ProjectMakerCases.h  ProjectTranslatorCases.h  RelationMakerCases.h  SectionalTextConverterCases.h  SectionalTextConvertionCases.h  SignatureMakerCases.h  SignatureParserCases.h  TypeMakerTestCases.h
Tests/test/: TestClassComponents.h  TestCommands.h  TestComponentsBase.h  TestComponentsMaker.h  TestDepthSearch.h  TestJson.h  TestProject.h  TestProjectBase.h  TestProjectMaker.h  TestProjectTranslator.h  TestSignatureMaker.hpp  TestTypeMaker.h  test.pro  testprojectbase.h.autosave
Tests/test/cases/: CommandsCases.h  ComponentsMakerCases.h  EntitiesCases.h  IComponentsCases.h  ID.h  ProjectTranslatorCases.h  RelationMakerCases.h  SignatureMakerCases.h  SignatureParserCases.h
Tests/test_data/: shared_pointer.h
Translation/: code.cpp  code.h  projecttranslator.cpp  projecttranslator.h  signaturemaker.cpp  signaturemaker.h  translator_types.hpp
Utility/: helpfunctions.cpp  helpfunctions.h
adaptors/: databaseadaptor.cpp  databaseadaptor.h  projectadaptor.cpp  projectadaptor.h  projectdatabaseadaptor.cpp  projectdatabaseadaptor.h
application/: Application.cpp  Application.h  Settings.cpp  Settings.h  application.cpp  application.h  settings.cpp  (+1 more)
(+1372 files in other folders)
